Upto day7 16JUL25

--- a/TomcatServer/pom.xml
+++ b/TomcatServer/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>webApp</groupId>
-  <artifactId>sampleWebApp</artifactId>
+  <groupId>Integrating</groupId>
+  <artifactId>TomcatServer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>sampleWebApp Maven Webapp</name>
+  <name>TomcatServer Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -30,12 +30,12 @@
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-webmvc</artifactId>
-    <version>7.0.0-M6</version>
+    <version>7.0.0-M5</version>
 </dependency>
   </dependencies>
 
   <build>
-    <finalName>sampleWebApp</finalName>
+    <finalName>TomcatServer</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
