--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>webApp</groupId>
-  <artifactId>sampleWebApp</artifactId>
+  <groupId>new</groupId>
+  <artifactId>webapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>sampleWebApp Maven Webapp</name>
+  <name>webapp Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -26,16 +26,15 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
-<dependency>
+    <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-webmvc</artifactId>
-    <version>7.0.0-M6</version>
-</dependency>
+    <version>7.0.0-M5</version>
+    </dependency>
   </dependencies>
 
   <build>
-    <finalName>sampleWebApp</finalName>
+    <finalName>webapp</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
